# progman.py

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  ruff.toml
.github/workflows/: main.yml
project/: board.md
scripts/: cleanmanifestloader.py  collectshortcuts.py  icondiscovery.py  newshortcuttestbench.py  qualitygate.py
src/progman/: icon.py  language.py  main.py  mainwindow.py  menubar.py  progmanwidget.py  programmanager.py  recognizer.py  shortcut.py  tags.py  theme.py
src/progman/assets/: __init__.py  assethandler.py
src/progman/core/: __init__.py  group.py  language.py  menuitem.py  protocols.py  recognizer.py  shortcut.py  state.py  tags.py  theme.py
src/progman/help/: Groups.md
src/progman/ui/: appdrawer.py  appicon.py  contextmenu.py  folderdrawer.py  groupdrawer.py  groupicon.py  groupswindow.py  groupwindow.py  icon.py  icondrawer.py  iconpropertiesdialog.py  mainwindow.py  menubar.py  newgroupdialog.py  newicondialog.py  progmanwidget.py  progmanwidgets.py  scrollframe.py  window.py
test/: __init__.py  test_programmanager.py  test_recognizer.py
test/test_assets/: test_assethandler.py
test/test_core/: test_group.py  test_menuitem.py  test_recognizer.py  test_shortcut.py  test_state.py
test/test_platforms/: test___init__.py  test_shortcut.py
test/test_ui/: test_main.py
